--- a/index.html
+++ b/index.html
@@ -12,47 +12,47 @@
     <h1>Wordle coach</h1>
     <main class="attempts">
         <div class="attemptOne">
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
+            <div id="0-0" class="1"></div>
+            <div id="0-1" class="1"></div>
+            <div id="0-2" class="1"></div>
+            <div id="0-3" class="1"></div>
+            <div id="0-4" class="1"></div>
         </div>
         <div class="attemptTwo">
-            <div class="letterTwo"></div>
-            <div class="letterTwo"></div>
-            <div class="letterTwo"></div>
-            <div class="letterTwo"></div>
-            <div class="letterTwo"></div>
+            <div id="1-0" class="2"></div>
+            <div id="1-1" class="2"></div>
+            <div id="1-2" class="2"></div>
+            <div id="1-3" class="2"></div>
+            <div id="1-4" class="2"></div>
         </div>
-        <!-- <div class="attemptThree">
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
+        <div class="attemptThree">
+            <div id="2-0" class="3"></div>
+            <div id="2-1" class="3"></div>
+            <div id="2-2" class="3"></div>
+            <div id="2-3" class="3"></div>
+            <div id="2-4" class="3"></div>
         </div>
         <div class="attemptFour">
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
+            <div id="3-0" class="4"></div>
+            <div id="3-1" class="4"></div>
+            <div id="3-2" class="4"></div>
+            <div id="3-3" class="4"></div>
+            <div id="3-4" class="4"></div>
         </div>
         <div class="attemptFive">
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
+            <div id="4-0" class="5"></div>
+            <div id="4-1" class="5"></div>
+            <div id="4-2" class="5"></div>
+            <div id="4-3" class="5"></div>
+            <div id="4-4" class="5"></div>
         </div>
         <div class="attemptSix">
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-            <div class="letterOne"></div>
-        </div> -->
+            <div id="5-0" class="6"></div>
+            <div id="5-1" class="6"></div>
+            <div id="5-2" class="6"></div>
+            <div id="5-3" class="6"></div>
+            <div id="5-4" class="6"></div>
+        </div>
     </main>
     <input id="word" type="text">
     <button id="submit"> Submit </button>
