--- a/index.html
+++ b/index.html
@@ -57,6 +57,42 @@
     <input id="word" type="text">
     <button id="submit"> Submit </button>
 
+    <div id="result">Result</div>
+
+    <div id="keyboard">
+    <div class="row" id="row-0">
+        <button id= "q" class="key">q</button>
+        <button id= "w" class="key">w</button>
+        <button id= "e" class="key">e</button>
+        <button id= "r" class="key">r</button>
+        <button id= "t" class="key">t</button>
+        <button id= "y" class="key">y</button>
+        <button id= "u" class="key">u</button>
+        <button id= "i" class="key">i</button>
+        <button id= "o" class="key">o</button>
+        <button id= "p" class="key">p</button>
+    </div>
+    <div class="row" id="row-1">
+        <button id= "a" class="key">a</button>
+        <button id= "s" class="key">s</button>
+        <button id= "d" class="key">d</button>
+        <button id= "f" class="key">f</button>
+        <button id= "g" class="key">g</button>
+        <button id= "h" class="key">h</button>
+        <button id= "j" class="key">j</button>
+        <button id= "k" class="key">k</button>
+        <button id= "l" class="key">l</button>
+    </div>
+    <div class="row" id="row-2">
+        <button id= "z" class="key">z</button>
+        <button id= "x" class="key">x</button>
+        <button id= "c" class="key">c</button>
+        <button id= "v" class="key">v</button>
+        <button id= "b" class="key">b</button>
+        <button id= "n" class="key">n</button>
+        <button id= "m" class="key">m</button>
+    </div>
+</div>
 
     
 </body>
