CSS is mostly completed, modal dialogues are working too.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
     <input id="word" type="text">
     <button id="submit"> Submit </button>
 
-    <div id="result">Result</div>
+    <div id="result">
+        <div id="modal">
+            <h1 id="modal-header"></h1>
+            <div id="modal-text">Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Dolor esse sed, eum dolorum laboriosam dicta minus, mollitia ea distinctio eiu
+                s culpa repellendus nisi error ab sint expedita? 
+                Quam, quas qui!</div>
+            <button id="modal-button">Close</button>
+        </div>
+    </div>
 
     <div id="keyboard">
     <div class="row" id="row-0">
