just completed my modal dialogues, now adding helper function

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
 
     <div id="result">
         <div id="modal">
+            <button id="modal-button">Close</button>
             <h1 id="modal-header"></h1>
-            <div id="modal-text">Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Dolor esse sed, eum dolorum laboriosam dicta minus, mollitia ea distinctio eiu
+            <div id="modal-text">Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Dolor esse sed, 
+                eum dolorum laboriosam dicta minus, mollitia ea distinctio eiu
                 s culpa repellendus nisi error ab sint expedita? 
                 Quam, quas qui!</div>
-            <button id="modal-button">Close</button>
+            
         </div>
     </div>
 
