--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 </div>
 
-<a href="wordlehelper.html"><button>Need Help?</button></a>
+<a href="wordlehelper.html"><button id="help">Need Help?</button></a>
 
     
 </body>
